2009-11-03  Elliott Baron  <ebaron@fedoraproject.org>

	* plugin.properties: Externalized preference page name.
	* plugin.xml: Likewise.
	* src/org/eclipse/linuxtools/internal/valgrind/core/messages.properties: Externalized/edited strings.
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPreferencePage.java: Likewise.

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 0.3.0.

2009-08-10  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/core/LaunchConfigurationConstants.java: Changed
	launch config constant for suppression files, since it is now a list.

2009-08-07  Andrew Overholt  <overholt@redhat.com>

	Bug #285861

	* plugin.properties: Change Provider to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind/core: Moved all but IValgrindMessage.
	* src/org/eclipse/linuxtools/internal/valgrind/core: New package.
	* META-INF/MANIFEST.MF: Export internal package.

2009-05-26  Elliott Baron  <ebaron@redhat.com>

	* AbstractValgrindTextParser.java: Add constant.
	* CommandLineConstants.java (OPT_MAINSTACK): Support for --main-stacksize.
	* LaunchConfigurationConstants.java: Likewise.

2009-04-30  Elliott Baron  <ebaron@redhat.com>

	* AbstractValgrindMessage.java: New file.
	* IValgrindMessage.java: New file.
	* ValgrindCoreParser.java: New file.
	* ValgrindError.java: New file.
	* ValgrindStackFrame.java: New file.
	* AbstractValgrindTextParser.java: Actually made abstract, pull up parseFilename.
	* CommandLineConstants.java: LOG_PREFIX moved here.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: 0.2.0 version.

2009-03-25  Elliott Baron  <ebaron@redhat.com>

	* LaunchConfigurationConstants.java: ATTR_OUTPUT_DIR -> ATTR_INTERNAL_OUTPUT_DIR.
	* PluginConstants.java (EXPORT_CMD_ID): ID for export command.

2009-03-11  Elliott Baron  <ebaron@redhat.com>

	* CommandLineConstants.java: Added --version argument.