@@ -24,7 +24,7 @@ ValgrindLaunchConfigurationDelegate.Valgrind_error_msg=Valgrind encountered an e
 ValgrindLaunchConfigurationDelegate.Valgrind_error_title=Valgrind Error
 ValgrindLaunchPlugin.Cannot_retrieve_delegate=Cannot retrieve delegate from extension
 ValgrindLaunchPlugin.Cannot_retrieve_page=Cannot retrieve page from extension
-ValgrindLaunchPlugin.Please_ensure_Valgrind=Please ensure Valgrind is installed and in your path.
+ValgrindLaunchPlugin.Please_ensure_Valgrind=Please ensure Valgrind is installed and in your path, or manually set a location in Preferences.
 ValgrindLaunchPlugin.Couldn't_determine_version=Couldn't determine version of Valgrind located at {0}.
 ValgrindLaunchPlugin.Error_min_version=The installed Valgrind ({0}) is older than the minimum supported version ({1}).
 ValgrindOptionsTab.Basic_Options=Basic Options
